# anabios

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/anabios-core/: Cargo.toml
crates/anabios-core/benches/: tick_bench.rs
crates/anabios-core/src/: age.rs  agent.rs  behavior.rs  biome.rs  carcass.rs  codex.rs  culture.rs  disaster.rs  genome.rs  integrate.rs  interact.rs  invention.rs  iq.rs  kin.rs  lib.rs  mathf.rs  module.rs  personality.rs  pheromone.rs  practice.rs  prelude.rs  program.rs  reproduce.rs  resource.rs  rng.rs  scenario.rs  sense.rs  settlement.rs  snapshot.rs  spatial.rs  species.rs  tick.rs  world.rs
crates/anabios-core/src/codex/: combat.rs  culture.rs  cycles.rs  disturbance.rs  invention.rs  mod.rs  population.rs  practice.rs  settlement.rs  signatures.rs  spatial.rs  traditions.rs  traits.rs  war.rs
crates/anabios-core/src/program/: mod.rs  starters.rs
crates/anabios-core/tests/: all_scenarios.rs  biome_adaptation.rs  codex_events.rs  cognition.rs  cognition_evolution.rs  combat_predation.rs  cooperation.rs  cooperation_emergence.rs  cultural_inventions.rs  culture.rs  determinism.rs  dialect_emergence.rs  dims.rs  disturbance.rs  dit_boundary.rs  feeding.rs  gene_culture.rs  invariants.rs  inventions.rs  inventions_sweep.rs  living_sandbox.rs  module_gating.rs  morphology_evolution.rs  named_behaviors.rs  personality_behavior.rs  pheromone_territory.rs  population_dynamics.rs  predator_prey_emergence.rs  program_evolution.rs  reproduction.rs  scavenge_index.rs  settlement_economy.rs  social_substrate.rs  speciation.rs  territory_emergence.rs  trade.rs  traditions.rs  trait_evolution.rs  war.rs  weapons_arms_race.rs
crates/anabios-godot/: Cargo.toml
crates/anabios-godot/src/: coevo.rs  lib.rs
crates/anabios-headless/: Cargo.toml
crates/anabios-headless/src/: demo.rs  main.rs  replay.rs  score.rs  sweep.rs
docs/superpowers/: m1-followups.md  m2-followups.md  m3-followups.md
docs/superpowers/plans/: 2026-05-23-m1-headless-core-skeleton.md  2026-05-23-m2-reproduction-mutation-speciation.md  2026-05-23-m3-modular-morphology.md  2026-05-23-m4-behavior-program.md  2026-05-23-m5-codex-core.md  2026-05-23-m6-godot-viewer-mvp.md  2026-05-28-m7-full-rendering.md  2026-05-28-m8-codex-ui-detectors.md  2026-05-28-m9-world-setup.md  2026-05-31-m10-sweep-and-perf.md  2026-06-21-m11-interaction-substrate-foundation.md  2026-07-10-m12-combat-predation.md  2026-07-12-godot-polish.md  (+23 more)
gallery/: README.md
game/: anabios.gdextension  anabios.gdextension.uid  project.godot
game/resources/: body_multimesh.tres
game/scenes/: main.tscn  menu.tscn
game/scripts/: biome_renderer.gd  camera_controller.gd  camera_controller.gd.uid  codex_panel.gd  coevolution_panel.gd  debug_capture.gd  dit_panel.gd  event_ticker.gd  event_ticker.gd.uid  evolution_panel.gd  game_config.gd  inspector_panel.gd  inspector_panel.gd.uid  legend_panel.gd  main.gd  main.gd.uid  menu.gd  overlay_manager.gd  palette.gd  population_panel.gd  replay_highlight.gd  replay_manager.gd  tech_panel.gd  time_controls.gd  time_controls.gd.uid  ui_theme.gd
scenarios/: biome-adaptation.toml  biome-trade.toml  cognitive-coevolution.toml  convergent.toml  cooperation.toml  cultural-inventions.toml  dialects.toml  disturbance.toml  dit-env-fast.toml  dit-env-slow.toml  dit-env-static.toml  dit-rogers.toml  divergent.toml  gene-culture-alarm.toml  gene-culture-hunt.toml  gene-culture-skill.toml  gene-culture.toml  geographic-trade.toml  inventions.toml  living-sandbox-coevolution.toml  minimal.toml  predator-prey.toml  sandbox-coevolution.toml  sandbox-large.toml  sandbox-xlarge.toml  settlement.toml  territories.toml  tool-users.toml  traditions.toml  trophic-cascade.toml  war.toml  weapons-arena.toml  weapons-arms-race.toml
(+24 files in other folders)
