[package]
name = "anabios-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic agent-based ecology simulation core for anabios."

[dependencies]
glam = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
smallvec = { workspace = true }
bitvec = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
anyhow = { workspace = true }
